# patch-calibre-desktop-files

./: Cargo.toml  README.md
src/: main.rs
test-files/: calibre-ebook-edit.desktop  calibre-ebook-viewer.desktop  calibre-gui.desktop  calibre-lrfviewer.desktop
