[package]
name = "patch-calibre-desktop-files"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Cooper (cooper.joseph@gmail.com)"]
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive", "env"] }
color-eyre = "0.6.2"
freedesktop_entry_parser = "1.3.0"
itertools = "0.10.5"
mediatype = "0.19.13"
